--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.8",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
