--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.2.8",
+    "@mui/x-date-pickers": "^5.0.19",
     "@react-page/editor": "^4.7.1",
     "@react-page/plugins-image": "^4.7.1",
     "@react-page/plugins-slate": "^4.7.1",
@@ -29,6 +30,7 @@
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
     "date-fns": "^2.8.1",
+    "dayjs": "^1.11.7",
     "downshift": "^6.1.7",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -40,7 +42,7 @@
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.20",
     "material-ui-popup-state": "^2.0.0",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "npm": "^8.1.3",
     "qrcode.react": "^1.0.1",
     "quill-image-resize-module-react": "^3.0.0",
