--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
-REACT_APP_REMOTE_DOMAIN =https://be.cuahangcuatoi.net/api
+# local
+REACT_APP_SERVER_HOST = http://localhost:8000
+REACT_APP_PUSHER_HOST = localhost
+REACT_APP_PUSHER_PORT = 6001
+REACT_APP_METABASE_HOST = http://localhost:3002
 
-REACT_APP_LOCAL_DOMAIN =http://localhost:8000/api
+# server
+# REACT_APP_SERVER_HOST = https://be.cuahangcuatoi.net
+# REACT_APP_PUSHER_HOST = ws.cuahangcuatoi.net
+# REACT_APP_PUSHER_PORT = 443
+# REACT_APP_METABASE_HOST = https://mb.cuahangcuatoi.net
+
+REACT_APP_WEBSOCKET_APP_KEY = apollo13
