--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "laravel-echo": "^1.15.0",
     "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.4",
+    "notistack": "^3.0.1",
     "npm": "^8.1.3",
     "pusher-js": "^8.0.1",
     "qrcode.react": "^1.0.1",
