--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ REACT_APP_METABASE_HOST = http://localhost:3002
 # REACT_APP_PUSHER_PORT = 443
 # REACT_APP_METABASE_HOST = https://mb.cuahangcuatoi.net
 
+# Never comment this
 REACT_APP_WEBSOCKET_APP_KEY = apollo13
