--- a/.env
+++ b/.env
@@ -1,14 +1,22 @@
-# local
-REACT_APP_SERVER_HOST = http://localhost:8000
-REACT_APP_PUSHER_HOST = localhost
-REACT_APP_PUSHER_PORT = 6001
-REACT_APP_METABASE_HOST = http://localhost:3002
+# # local
+# REACT_APP_SERVER_HOST = http://localhost:8000
+# REACT_APP_PUSHER_HOST = localhost
+# REACT_APP_PUSHER_PORT = 6001
+# REACT_APP_METABASE_HOST = http://localhost:3002
 
 # server
-# REACT_APP_SERVER_HOST = https://be.cuahangcuatoi.net
-# REACT_APP_PUSHER_HOST = ws.cuahangcuatoi.net
-# REACT_APP_PUSHER_PORT = 443
-# REACT_APP_METABASE_HOST = https://mb.cuahangcuatoi.net
+REACT_APP_SERVER_HOST = https://be.cuahangcuatoi.net
+REACT_APP_PUSHER_HOST = ws.cuahangcuatoi.net
+REACT_APP_PUSHER_PORT = 443
+REACT_APP_METABASE_HOST = https://mb.cuahangcuatoi.net
 
-# Never comment this
+# ws app key
 REACT_APP_WEBSOCKET_APP_KEY = apollo13
+
+# For school server 
+# REACT_APP_SERVER_HOST = http://103.15.51.131:9000
+# REACT_APP_PUSHER_HOST = 103.15.51.131
+# REACT_APP_PUSHER_PORT = 9002
+# REACT_APP_METABASE_HOST = http://103.15.51.131:9003
+
+# REACT_APP_WEBSOCKET_APP_KEY = masterspark
